package main.java.Recipe;

/**
 * 食材のカテゴリを定義する列挙型
 */
public enum IngredientCategory {
    VEGETABLE, MEAT, SEAFOOD, CARBOHYDRATE, FRUIT, MILK, PICKLES, SEASONING, OTHER
}