@startuml
skinparam ClassAttributeIconSize 0

enum IngredientCategory {
    VEGETABLE
    MEAT
    SEAFOOD
    CARBOHYDRATE
    MILK
    OTHER
    SEASONING
}

class Ingredient {
    - name: String
    - category: IngredientCategory
    + getName(): String
    + getCategory(): IngredientCategory
}

class Recipe {
    - title: String
    - url: String
    - ingredients: ArrayList<Ingredient>
    + getTitle(): String
    + getUrl(): String
    + getIngredients(): ArrayList<Ingredient>
}

class IngredientMaster {
    - database: HashMap<Ingredient, String>
    + loadCsv(): void
    + searchIngredient(category: IngredientCategory): ArrayList<Ingredient>
    + getAllIngredients(): ArrayList<Ingredient>
}

class AllRecipeList {
    - recipeList: ArrayList<Recipe>
    + addRecipe(recipe: Recipe): void
    + read(): void
    + write(): void
}

class RecipeAIService {
    - API_URL: String
    - MODEL_NAME: String
    + suggestRecipe(allIngredients: ArrayList<Ingredient>): String[]
    - parseResponse(json: String): String[]
}

class SwingMain {
    - allRecipeList: AllRecipeList
    - ingredientMaster: IngredientMaster
    - centerPanel: JPanel
    + showRegisterForm(): void
    + showViewMenu(): void
}

' 関係性の定義
SwingMain --> AllRecipeList
SwingMain --> IngredientMaster
SwingMain ..> RecipeAIService : uses
AllRecipeList "1" *-- "many" Recipe
Recipe "many" o-- "many" Ingredient
Ingredient "many" -- "1" IngredientCategory
IngredientMaster "1" *-- "many" Ingredient

@enduml